--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -4,5 +4,9 @@
     border: 1px solid var(--border);
     border-radius: 2rem;
     background: url('../images/search.png') no-repeat 1rem;
+    @include respond(phone) {
+      width: 100%;
+      padding: 1.5rem 5rem;
+    }
   }
 }
